[gd_scene load_steps=11 format=3 uid="uid://cf5k2khdcau6k"]

[ext_resource type="FontVariation" uid="uid://bx2vorhu8ohwn" path="res://MainFont.tres" id="1_i5vmn"]
[ext_resource type="Script" uid="uid://1ej57qgewn53" path="res://winner_menu.gd" id="1_juq3m"]
[ext_resource type="Texture2D" uid="uid://dqj552qeum1aq" path="res://assets/Button02.png" id="2_juq3m"]
[ext_resource type="Texture2D" uid="uid://q2wwlu38ibeq" path="res://assets/Button.png" id="3_0lnmx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_14knf"]
texture = ExtResource("2_juq3m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0dqjl"]
texture = ExtResource("2_juq3m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aucxv"]
texture = ExtResource("3_0lnmx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pkthc"]
texture = ExtResource("2_juq3m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62gwh"]
texture = ExtResource("2_juq3m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3v2rj"]
texture = ExtResource("3_0lnmx")

[node name="WinnerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juq3m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="WinnerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -490.0
offset_top = 200.0
offset_right = 490.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_i5vmn")
theme_override_font_sizes/font_size = 70
text = "Player 1 Wins!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_i5vmn")
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxTexture_14knf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0dqjl")
theme_override_styles/normal = SubResource("StyleBoxTexture_aucxv")
text = "Restart"

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ExitButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_i5vmn")
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxTexture_pkthc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_62gwh")
theme_override_styles/normal = SubResource("StyleBoxTexture_3v2rj")
text = "Exit to Main Menu"
